# language_translator-

./: .gitignore  PLAY_STORE_CHECKLIST.md  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  TERMS_OF_SERVICE.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  keystore.properties.template  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/espeak-ng-data/: PLACE_ESPEAK_DATA_HERE.txt
app/src/main/assets/models/: PLACE_MODELS_HERE.txt
app/src/main/assets/models/g2p/: PLACE_LEXICONS_HERE.txt
app/src/main/cpp/: CMakeLists.txt  espeak_jni.cpp
app/src/main/cpp/include/: PLACE_ESPEAK_HEADERS_HERE.txt
app/src/main/java/com/eartranslator/: LicensesActivity.kt  MainActivity.kt  PrivacyActivity.kt  TermsActivity.kt
app/src/main/java/com/eartranslator/audio/: AudioCaptureManager.kt  AudioPlaybackManager.kt
app/src/main/jniLibs/: PLACE_ESPEAK_SO_HERE.txt
app/src/main/res/drawable/: dot.xml  ic_bluetooth.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_translate.xml  spinner_bg.xml  status_bg.xml
app/src/main/res/layout/: activity_licenses.xml  activity_main.xml
app/src/main/res/raw/: licenses.txt  privacy_policy.txt  terms.txt
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
tools/: prepare_models.sh  roundtrip_test.py
(+23 files in other folders)
